# pcb-defect-detection

./: .gitattributes  .gitignore  README.md  plan.md  pyproject.toml
.github/workflows/: ci.yml
app/: README.md  app.py  requirements.txt
notebooks/: benchmark_colab.ipynb  train_colab.ipynb
reports/: benchmark.md  benchmark_cpu.json  benchmark_gpu.json  export_fidelity.json  leakage_comparison.md  onnx_parity.json  sahi_ablation.json  sahi_ablation.md  stats.md  test_metrics.json
scripts/: benchmark_cpu.py  deploy_space.py  evaluate.py  export_models.py  render_benchmark_report.py  render_readme.py  sahi_experiment.py  upload_hf.py  verify_onnx_parity.py
src/pcb_defect/: __init__.py  constants.py  e2e_onnx.py  smoke.py  stats.py  viz.py
src/pcb_defect/data_prep/: __init__.py  convert.py  download.py  prepare.py  split.py  voc.py
tests/: test_split.py  test_voc_convert.py
tests/fixtures/: sample.xml
